Fix wrapping of related media views
Broken by 9632eb398d3e6e0d017d249872d42dd4d638201c

--- a/mediacore/public/styles/base.css
+++ b/mediacore/public/styles/base.css
@@ -426,7 +426,7 @@ a:focus .grid-title {
 	width: 35px;
 }
 .grid-meta .meta-views {
-	width: 120px;
+	width: 105px;
 }
 
 .thumb-wrap {
